<?xml version="1.0"?>
<package format="2">
  <name>pilz_6D_key_teleop</name>
  <version>0.1.0</version>
  <description>keyboard teleoperation package</description>

  <maintainer email="j.schleicher@pilz.de">Joachim Schleicher</maintainer>
  <maintainer email="p.cheray@pilz.de">Philippe Cheray</maintainer>
  <maintainer email="r.feistenauer@pilz.de">Richard Feistenauer</maintainer>
  <maintainer email="t.vetter@pilz.de">Tobias Vetter</maintainer>

  <license>LGPLv3</license>

  <url type="bugtracker">https://github.com/PilzDE/pilz_teach/issues</url>
  <url type="repository">https://github.com/PilzDE/pilz_teach</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>